--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="flexible" content="initial-dpr=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" href="favicon.ico">
     <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script>
-    <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
     <title>nacl project</title>
 </head>
 <body>
